--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-fileupload": "^0.4.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.4",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   }
 }
